# schunk_description

./: README.md
.github/ISSUE_TEMPLATE/: general_issue.md
egp_description/: CMakeLists.txt  package.xml
egp_description/meshes/: egp_trans_1.dae  egp_trans_2.dae
egu_50_description/: CMakeLists.txt  package.xml  readme.md
egu_50_description/config/: joint_names_egu_50_fingers_08_16.yaml
egu_50_description/launch/: display.launch  egu_50.launch  load_egu_50.launch
egu_50_description/meshes/: base_link.dae  gripper_base_link_left.dae  symbol_2_left.dae  symbol_2_right.dae  translational_left.dae  translational_right.dae
egu_50_description/urdf/: egu_50.transmission.xacro  egu_50.urdf.xacro  egu_50.xacro  egu_50_base_link.urdf.xacro  egu_50_base_link.xacro  egu_50_fingers_link.urdf.xacro  egu_50_fingers_link.xacro  egu_50_fingers_version2_link.urdf.xacro  egu_50_fingers_version2_link.xacro
egu_50_ur_description/: CMakeLists.txt  package.xml  readme.md
egu_50_ur_description/launch/: load_ur_egu.launch
egu_50_ur_description/urdf/: ur_egu.urdf.xacro  ur_egu.xacro
egu_description/: CMakeLists.txt  package.xml  readme.md
egu_description/meshes/: base_link.dae  gripper_base_link_left.dae  gripper_base_link_right.dae  gripper_finger_down.dae  gripper_finger_up.dae  screw_2.dae  screw_3.dae  screw_4.dae  symbol_1_left.dae  symbol_1_right.dae  symbol_2_left.dae  symbol_2_right.dae  translational_left.dae  translational_right.dae
pzn_plus/: package.xml
pzn_plus/meshes/: pzn_plus_finger.dae  pzn_plus_finger_1.dae  pzn_plus_trans.dae
pzn_plus_description/: CMakeLists.txt  package.xml
pzn_plus_description/meshes/: pzn_plus_finger.dae  pzn_plus_finger_1.dae  pzn_plus_trans.dae
pzv_64_description/: CMakeLists.txt  package.xml
pzv_64_description/meshes/: pvz_trans.dae
ur_schunk_gripper_description/: CMakeLists.txt  package.xml  readme.md
ur_schunk_gripper_description/config/: robot_model.rviz
ur_schunk_gripper_description/launch/: display.launch  gazebo.launch  load_ur_schunk_gripper.launch
ur_schunk_gripper_description/urdf/: ur_schunk_gripper.urdf.xacro  ur_schunk_gripper.xacro
