<package format="2">
  <name>egp_description</name>
  <version>0.0.0</version>
  <description>URDF Description package </description>
  <maintainer email="TODO@email.com" />
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>joint_state_publisher</build_depend>
  <build_depend>joint_state_publisher_gui</build_depend>
  <build_depend>robot_state_publisher</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>joint_state_publisher</build_export_depend>
  <build_export_depend>joint_state_publisher_gui</build_export_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <export>
  <!-- The export tag contains other, unspecified, tags -->
  </export>
</package>