<package format="2">
  <name>pzv_64_description</name>
  <version>0.0.0</version>
  <description>URDF Description package for eug50_version_2</description>
  <author>Jinbao Xiong</author>
  <author>Fabian Reinwald</author>
  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="jinbao.xiong@de.schunk.com">Jinbao Xiong</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv3</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>joint_state_publisher</build_depend>
  <build_depend>joint_state_publisher_gui</build_depend>
  <build_depend>robot_state_publisher</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>joint_state_publisher</build_export_depend>
  <build_export_depend>joint_state_publisher_gui</build_export_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <export>
  <!-- The export tag contains other, unspecified, tags -->
  </export>
</package>
