<package format="2">
  <name>egu_50_ur_description</name>
  <version>0.0.0</version>
  <description>URDF Description package for conbination between EGU 50 gripper and ur10e robot arm</description>
  <author>Jinbao Xiong</author>
  <author>Fabian Reinwald</author>
  <maintainer email="stefan.scherzinger@de.schunk.com">Stefan Scherzinger</maintainer>
  <license>GPL-3.0-or-later</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>egu_description</build_depend>
  <build_depend>egp_description</build_depend>
  <build_depend>pzn_plus_description</build_depend>
  <build_depend>pzv_64_description</build_depend>
  <build_depend>ur_description</build_depend>


  <export>
  <!-- The export tag contains other, unspecified, tags -->
  </export>
</package>
